Fixed pseudoelement overlap on shopping card

--- a/less/_components/cart/_shoppingCard.less
+++ b/less/_components/cart/_shoppingCard.less
@@ -25,6 +25,7 @@
       &:after{
         background-color: var(~'--color-flavor-@{class}-border');
         opacity: 10%;
+        z-index: -1;
       }
     }
   }
